--- a/summary.Rmd
+++ b/summary.Rmd
@@ -6,9 +6,16 @@ date: '`r Sys.time()`'
 ```{r settings, echo = FALSE}
 VersionPalette <- function(minor) {
   setNames(hcl.colors(6, switch(as.character(minor),
-         "3.4" = "Purp", "3.5" = "Mint", "3.6" = "Peach",
-         "4.0" = "Blues", "4.1" = "Light Grays", "4.2" = "TealGrn",
-         "4.3" = "BrwnYl", "4.4" = "Burg", "Reds 3")),
+         "3.3" = "Reds 3",
+         "3.4" = "Peach",
+         "3.5" = "BrwnYl", 
+         "3.6" = "Burg", 
+         "4.0" = "Blues",
+         "4.1" = "Purp", 
+         "4.2" = "Light Grays",
+         "4.3" = "TealGrn",
+         "4.4" = "Mint",
+         "Rocket")),
          paste0(minor, ".", 0:5))
 }
 rCols <- unlist(lapply(c(seq(3.1, 3.6, 0.1), "4.0", c(seq(4.1, 4.4, 0.1))),
@@ -18,6 +25,7 @@ rCols <- unlist(lapply(c(seq(3.1, 3.6, 0.1), "4.0", c(seq(4.1, 4.4, 0.1))),
 ```{r read-logs, echo = FALSE}
 downloads <- do.call(rbind, 
                      lapply(list.files("logs", full.names = TRUE), read.csv))
+downloads$month <- substr(downloads$date, 1, 7)
 ```
 
 # Ternary
@@ -25,9 +33,39 @@ downloads <- do.call(rbind,
 ```{r ternary, echo = FALSE}
 pkg <- downloads[downloads$package == "Ternary", ]
 
-tab <- table(pkg[, c("r_version", "date")])
+tab <- table(pkg[, c("r_version", "month")])
+par(mar = c(5, 3, 0.1, 0.1))
 barplot(tab, col = rCols[rownames(tab)], las = 2)
-majors <- c(3.3, 3.4, 3.5, 3.6, "4.0", 4.1, 4.2, 4.3, 4.4)
-legend("topleft", majors, pch = 15, col = rCols[paste0(majors, ".2")],
-       ncol = 2)
+majors <- unique(substr(rownames(tab)[rowSums(tab) > 10], 1, 3))
+legend("topright", majors, pch = 15, col = rCols[paste0(majors, ".2")],
+       ncol = 2, xpd = NA, cex = 0.8, title = "R version")
+
+
+tab <- table(pkg[, c("version", "month")])
+par(mar = c(5, 3, 0.1, 0.1))
+vPal <- hcl.colors(nrow(tab))
+bp <- barplot(tab, las = 2, col = vPal)
+legend("topright", rev(rownames(tab)), pch = 15, col = rev(vPal),
+       ncol = 2, xpd = NA, cex = 0.8, bty = "n", title = "Package version")
+```
+
+# TreeTools
+
+```{r treetools, echo = FALSE}
+pkg <- downloads[downloads$package == "TreeTools", ]
+
+tab <- table(pkg[, c("r_version", "month")])
+par(mar = c(5, 3, 0.1, 0.1))
+barplot(tab, col = rCols[rownames(tab)], las = 2)
+majors <- unique(substr(rownames(tab)[colSums(tab) > 10], 1, 3))
+legend("topright", majors, pch = 15, col = rCols[paste0(majors, ".2")],
+       ncol = 2, xpd = NA, cex = 0.8, title = "R version")
+
+
+tab <- table(pkg[, c("version", "month")])
+par(mar = c(5, 3, 0.1, 0.1))
+vPal <- hcl.colors(nrow(tab))
+bp <- barplot(tab, las = 2, col = vPal)
+legend("topright", rev(rownames(tab)), pch = 15, col = rev(vPal),
+       ncol = 2, xpd = NA, cex = 0.8, bty = "n", title = "Package version")
 ```
