--- a/summary.Rmd
+++ b/summary.Rmd
@@ -28,44 +28,29 @@ downloads <- do.call(rbind,
 downloads$month <- substr(downloads$date, 1, 7)
 ```
 
-# Ternary
-
-```{r ternary, echo = FALSE}
-pkg <- downloads[downloads$package == "Ternary", ]
-
-tab <- table(pkg[, c("r_version", "month")])
-par(mar = c(5, 3, 0.1, 0.1))
-barplot(tab, col = rCols[rownames(tab)], las = 2)
-majors <- unique(substr(rownames(tab)[rowSums(tab) > 10], 1, 3))
-legend("topright", majors, pch = 15, col = rCols[paste0(majors, ".2")],
-       ncol = 2, xpd = NA, cex = 0.8, title = "R version")
-
-
-tab <- table(pkg[, c("version", "month")])
-par(mar = c(5, 3, 0.1, 0.1))
-vPal <- hcl.colors(nrow(tab))
-bp <- barplot(tab, las = 2, col = vPal)
-legend("topright", rev(rownames(tab)), pch = 15, col = rev(vPal),
-       ncol = 2, xpd = NA, cex = 0.8, bty = "n", title = "Package version")
+```{r function-definitions, echo = FALSE}
+SummaryBlock <- function(packageName) {
+  cat(paste("\n\n##", packageName, "\n"))
+  pkg <- downloads[downloads$package == packageName, ]
+  
+  
+  tab <- table(pkg[, c("r_version", "month")])
+  par(mar = c(5, 3, 0.1, 0.1))
+  barplot(tab, col = rCols[rownames(tab)], las = 2)
+  majors <- unique(substr(rownames(tab)[rowSums(tab) > 10], 1, 3))
+  legend("topright", majors, pch = 15, col = rCols[paste0(majors, ".2")],
+         ncol = 2, xpd = NA, cex = 0.8, title = "R version")
+  
+  
+  tab <- table(pkg[, c("version", "month")])
+  par(mar = c(5, 3, 0.1, 0.1))
+  vPal <- hcl.colors(nrow(tab))
+  bp <- barplot(tab, las = 2, col = vPal)
+  legend("topright", rev(rownames(tab)), pch = 15, col = rev(vPal),
+         ncol = 2, xpd = NA, cex = 0.8, bty = "n", title = "Package version")
+}
 ```
 
-# TreeTools
-
-```{r treetools, echo = FALSE}
-pkg <- downloads[downloads$package == "TreeTools", ]
-
-tab <- table(pkg[, c("r_version", "month")])
-par(mar = c(5, 3, 0.1, 0.1))
-barplot(tab, col = rCols[rownames(tab)], las = 2)
-majors <- unique(substr(rownames(tab)[colSums(tab) > 10], 1, 3))
-legend("topright", majors, pch = 15, col = rCols[paste0(majors, ".2")],
-       ncol = 2, xpd = NA, cex = 0.8, title = "R version")
-
-
-tab <- table(pkg[, c("version", "month")])
-par(mar = c(5, 3, 0.1, 0.1))
-vPal <- hcl.colors(nrow(tab))
-bp <- barplot(tab, las = 2, col = vPal)
-legend("topright", rev(rownames(tab)), pch = 15, col = rev(vPal),
-       ncol = 2, xpd = NA, cex = 0.8, bty = "n", title = "Package version")
+```{r ternary, echo = FALSE, results = "asis"}
+invisible(lapply(sort(unique(downloads$package)), SummaryBlock))
 ```
