--- a/index.Rmd
+++ b/index.Rmd
@@ -25,13 +25,14 @@ rCols <- unlist(lapply(c(seq(3.1, 3.6, 0.1), "4.0", c(seq(4.1, 4.4, 0.1))),
 ```{r read-logs, echo = FALSE}
 downloads <- do.call(rbind, 
                      lapply(list.files("logs", full.names = TRUE), read.csv))
-downloads$month <- substr(downloads$date, 1, 7)
+downloads$month <- substr(downloads[["date"]], 1, 7)
 ```
 
 ```{r function-definitions, echo = FALSE}
 SummaryBlock <- function(packageName) {
   cat(paste("\n\n##", packageName, "\n"))
-  pkg <- downloads[downloads$package == packageName, ]
+  pkg <- downloads[downloads[["package"]] == packageName, ]
+  pkg[["version"]] <- gsub("\\.tar\\.gz.*", "", pkg[["version"]])
   
   
   tab <- table(pkg[, c("r_version", "month")])
