--- a/index.Rmd
+++ b/index.Rmd
@@ -10,15 +10,18 @@ VersionPalette <- function(minor) {
          "3.4" = "Peach",
          "3.5" = "BrwnYl", 
          "3.6" = "Burg", 
-         "4.0" = "Blues",
+         "4.0" = "Emrld",
          "4.1" = "Purp", 
          "4.2" = "Light Grays",
          "4.3" = "TealGrn",
          "4.4" = "Mint",
-         "Rocket")),
+         "4.5" = "Blues",
+         "4.6" = "YlGnBu",
+         "4.7" = "BuPu",
+         "Earth")),
          paste0(minor, ".", 0:5))
 }
-rCols <- unlist(lapply(c(seq(3.1, 3.6, 0.1), "4.0", c(seq(4.1, 4.4, 0.1))),
+rCols <- unlist(lapply(c(seq(3.1, 3.6, 0.1), "4.0", c(seq(4.1, 4.7, 0.1))),
                   VersionPalette))
 ```
 
