--- a/index.Rmd
+++ b/index.Rmd
@@ -16,7 +16,7 @@ VersionPalette <- function(minor) {
          "4.3" = "TealGrn",
          "4.4" = "Mint",
          "4.5" = "BuPu",
-         "4.6" = "SubsetDark",
+         "4.6" = "SunsetDark",
          "4.7" = "Peach",
          "Earth")),
          paste0(minor, ".", 0:5))
@@ -57,8 +57,8 @@ SummaryBlock <- function(packageName) {
 }
 ```
 
-Note that downloads with no R version information are excluded from the 
-respective summary plots.
+Downloads with no R version information are excluded from the respective
+summary plots.
 
 ```{r package-statistics, echo = FALSE, results = "asis"}
 invisible(lapply(sort(unique(downloads$package)), SummaryBlock))
