--- a/index.Rmd
+++ b/index.Rmd
@@ -46,7 +46,7 @@ SummaryBlock <- function(packageName) {
   par(mar = c(5, 3, 0.1, 0.1))
   barplot(tab, col = rCols[rownames(tab)], las = 2)
   majors <- unique(substr(rownames(tab)[rowSums(tab) > 10], 1, 3))
-  legend("topright", majors, pch = 15, col = rCols[paste0(majors, ".2")],
+  legend("topleft", majors, pch = 15, col = rCols[paste0(majors, ".2")],
          ncol = 2, xpd = NA, cex = 0.8, title = "R version")
   
   
@@ -56,7 +56,7 @@ SummaryBlock <- function(packageName) {
   par(mar = c(5, 3, 0.1, 0.1))
   vPal <- rep(hcl.colors(8, "Temps"), length.out = nrow(tab))
   bp <- barplot(tab, las = 2, col = vPal)
-  legend("topright", rev(rownames(tab)), pch = 15, col = rev(vPal),
+  legend("topleft", rev(rownames(tab)), pch = 15, col = rev(vPal),
          ncol = 2, xpd = NA, cex = 0.8, bty = "n", title = "Package version")
 }
 ```
